# TelegramArxivSummarizer

./: .gitignore  README.md  pyproject.toml
src/: ai.py  arxiv_monitor.py  bot.py  config.py  database.py  main.py  pdf.py
